--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -209,7 +209,7 @@ let maps = {
       'StPaulsWorld': { scale: 1, offset: {x:3000, y:0} },
       'CoventGardenWorldSpace': { scale: 1, offset: {x:1500, y:-2000} },
 
-      // those seem to be pretty close to worldspace offsets
+      // those seem to be pretty close to worldspace offsets (try zero values)
       'IWMWorld':{ scale: 1, offset: {x:0, y:0} },
       'DumpWorld':{ scale: 1, offset: {x: 2000, y: -2000,} },
       'BromleyPindarWorld':{ scale: 1, offset: {x:-9000, y:-8000} },
