--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -866,9 +866,10 @@ function popupOnClick(e) {
     div.classList.remove('collapsed');
     div.appendChild(document.createElement('hr'));
 
-    for (const id of list) {
-      let name = markers[section][id].name || markers[section][id].editor_id || id;
-      let desc = markers[section][id].description;
+    for (const form_id of list) {
+      let editor_id = markers[section][form_id].editor_id || form_id;
+      let name = markers[section][form_id].name || form_id;
+      let desc = markers[section][form_id].description;
 
       let title = desc ? ( name +': ' + desc ) : name;
 
@@ -881,10 +882,10 @@ function popupOnClick(e) {
       c0.classList.add('fa-' + ['scroll','gun','star','shirt',''][i]);
 
       let a = document.createElement('a');
-      a.title = id;
+      a.title = `${editor_id} [${form_id}]`;
       a.textContent = itemText(title, o);
       a.href = 'https://fallout.wiki/wiki/Mod:Fallout_London/' + encodeURIComponent(itemText(name, o));
-      a.target = 'blank_';
+      a.onclick = function() { copyToClipboard(editor_id); return false; };
 
       li.appendChild(c0);
       li.appendChild(a);
