--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -882,7 +882,7 @@ function popupOnClick(e) {
       c0.classList.add('fa-' + ['scroll','gun','star','shirt',''][i]);
 
       let a = document.createElement('a');
-      a.title = `${editor_id} [${form_id}] (click to copy editor id to clipboard)`;
+      a.title = `[${form_id}] (Click to Copy "${editor_id}" to Clipboard)`;
       a.textContent = itemText(title, o);
       a.href = 'https://fallout.wiki/wiki/Mod:Fallout_London/' + encodeURIComponent(itemText(name, o));
       a.onclick = function() { copyToClipboard(editor_id); return false; };
