--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -882,7 +882,19 @@ function popupOnClick(e) {
       c0.classList.add('fa-' + ['scroll','gun','star','shirt',''][i]);
 
       let a = document.createElement('a');
-      a.title = section=='quests' ? `Copy Editor ID to Clipboard [${form_id}] ${editor_id}` : `Copy Form ID to Clipboard [${form_id}]`
+
+      if (section=='quests') {
+        let title = `Copy Editor ID to Clipboard [${form_id}] ${editor_id}`;
+
+        for (const [stage,desc] of Object.entries(markers[section][form_id]['objectives']||{})) {
+          title += `\n${stage}: ${desc}`
+        }
+
+        a.title = title;
+
+      } else {
+        a.title = `Copy Form ID to Clipboard [${form_id}]`;
+      }
 
       a.textContent = itemText(title, o);
       a.href = 'https://fallout.wiki/wiki/Mod:Fallout_London/' + encodeURIComponent(itemText(name, o));
