--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -884,7 +884,7 @@ function popupOnClick(e) {
       let a = document.createElement('a');
 
       if (section=='quests') {
-        let title = `Copy Editor ID to Clipboard [${form_id}] ${editor_id}`;
+        let title = `Copy Editor ID to Clipboard [${editor_id}] (${form_id})`;
 
         for (const [stage,desc] of Object.entries(markers[section][form_id]['objectives']||{})) {
           title += `\n${stage}: ${desc}`
