hide all the doors

--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -1123,7 +1123,7 @@ function loadMarkers() {
     }
 
     // hide interior doors (?)
-    //if (type == 'Door' && !o.area) continue;
+    if (type == 'Door' && !o.area) continue;
 
     let c = getLoc(feature);
 
