--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -941,11 +941,11 @@ function popupOnClick(e) {
   if (o.cell) {
     popup.querySelector('#popup-note').title = `Copy Cell ID to Clipboard (${o.cell})`;
     popup.querySelector('#popup-note').onclick = function() { copyToClipboard(o.cell); };
-    popup.querySelector('#popup-note').style.cursor = 'pointer';
+    popup.querySelector('#popup-note').classList.add('active');
   } else {
-    popup.querySelector('#popup-note').title = ``;
-    popup.querySelector('#popup-note').onclick = function() {};
-    popup.querySelector('#popup-note').style.cursor = 'default';
+    popup.querySelector('#popup-note').removeAttribute('title');
+    popup.querySelector('#popup-note').onclick = null;
+    popup.querySelector('#popup-note').classList.remove('active');
   }
 
   popup.querySelector('#popup-data').innerHTML = '<hr/><pre>'+JSON.stringify(o, null, 2) + '</pre>';
