--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Joric's Supraland 3D</title>
+<title>Joric's Maps</title>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta property="og:image" content="https://img.youtube.com/vi/7fkqMHoESr8/hqdefault.jpg" />
