--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -882,13 +882,22 @@ function popupOnClick(e) {
       let li = document.createElement('div');
       li.className = 'popup-subnote-item';
 
-      let c0 = document.createElement('span');
+      let c0 = document.createElement('a');
       c0.className = 'icon';
-      c0.classList.add('fa');
-      c0.classList.add('fa-' + ['scroll','gun','star','shirt',''][i]);
+
+      let i0 = document.createElement('span');
+      i0.classList.add('fa');
+      i0.classList.add('fa-' + ['scroll','gun','star','shirt',''][i]);
+
+      c0.href = 'https://fallout.wiki/wiki/Mod:Fallout_London/' + encodeURIComponent(itemText(name, o));
+      c0.onclick = function() { copyToClipboard(section=='quests' ? editor_id : form_id); return false; };
+      c0.appendChild(i0);
+
 
       let a = document.createElement('a');
-      a.title = section == 'quests' ? `Copy Quest ID to Clipboard (${editor_id})` : `Copy Form ID to Clipboard (${form_id})`;
+      c0.title = section == 'quests' ? `Copy Quest ID to Clipboard (${editor_id})` : `Copy Form ID to Clipboard (${form_id})`;
+
+      a.title = section == 'quests' ? `${editor_id} (Click Icon to Copy)` : `Form ID ${form_id}`;
 
       if (Object.keys(objectives).length>0) {
         a.title += '\n---\n' + Object.entries(objectives).map( ([key,value])=>`${key}: ${strip(value)}`).join('\n');
@@ -909,12 +918,17 @@ function popupOnClick(e) {
           c.className = 'popup-subnote-toggle';
           c.setAttribute('data-toggle','collapse');
           c.setAttribute('data-target', form_id);
+
           c.onclick = function(e) {
             let id = e.target.getAttribute('data-target');
             toggleClass(e.target, 'open');
             toggleClass(document.getElementById(id), 'collapsed');
             return false;
           };
+
+          // override title click
+          a.onclick = function(e) { e.preventDefault(); return c.click(); };
+
           li.appendChild(c);
 
           let d = document.createElement('div');
