--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -295,22 +295,23 @@ function loadLocalData() {
   document.querySelector('#file').click();
 }
 
-async function saveTextToFile(text, filename) {
-  const fileHandle = await window.showSaveFilePicker({
-    suggestedName: filename,
-    types: [{
-      description: 'JSON Files',
-      accept: {'text/json': ['.json']},
-    }],
-  });
-  const writableStream = await fileHandle.createWritable();
-  await writableStream.write(text);
-  await writableStream.close();
-}
-
 function saveLocalData() {
   let data = localStorage.getItem(localDataName);
-  showSaveFilePicker({suggestedName: localDataName+'.json'}).then(f=>f.createWritable()).then(f=>f.write(data).then(()=>f.close()));
+  if (window.showSaveFilePicker) {
+    window.showSaveFilePicker({suggestedName: localDataName+'.json'}).then(f=>f.createWritable()).then(f=>f.write(data).then(()=>f.close()));
+  } else {
+    let filename = localDataName+'.json';
+    let blob = new Blob([data], {type: "text/json"});
+    if(navigator.msSaveOrOpenBlob) {
+        navigator.msSaveOrOpenBlob(blob, filename);
+    } else {
+        var a = document.body.appendChild(document.createElement("a"));
+        a.href = URL.createObjectURL(blob);
+        a.download = filename;
+        a.click();
+        a.remove();
+    }
+  }
 }
 
 function unmarkAll() {
