--- a/examples/remap/index.html
+++ b/examples/remap/index.html
@@ -1067,7 +1067,7 @@ function loadLocalData() {
 function saveLocalData() {
   let data = localStorage.getItem(localDataName);
   data = JSON.stringify(JSON.parse(data), null, 2);
-  showSaveFilePicker({suggestedName: localDataName+'.json'}).then(f=>f.createWritable()).then(f=>f.write(data) && f.close());
+  saveTextToFile(data, localDataName+'.json');
 }
 
 function resetLocalData() {
@@ -1081,6 +1081,22 @@ function exportControlPoints() {
   saveTextToFile(JSON.stringify(data, null, 2), filename);
 }
 
+function saveTextToFile(data, filename) {
+  if (window.showSaveFilePicker) {
+    window.showSaveFilePicker({suggestedName: filename}).then(f=>f.createWritable()).then(f=>f.write(data).then(()=>f.close()));
+  } else {
+    let blob = new Blob([data], {type: "text/json"});
+    if(navigator.msSaveOrOpenBlob) {
+        navigator.msSaveOrOpenBlob(blob, filename);
+    } else {
+        var a = document.body.appendChild(document.createElement("a"));
+        a.href = URL.createObjectURL(blob);
+        a.download = filename;
+        a.click();
+        a.remove();
+    }
+  }
+}
 
 function exportMarkers() {
   let data = {
